--- a/css/form.css
+++ b/css/form.css
@@ -19,7 +19,6 @@
 .gs-ftext {
 	background: #FFF;
 	border: 1px solid #AAA;
-	border-radius: 3px;
 	height: 25px;
 	width: 200px;
 	padding: 5px;
@@ -29,6 +28,7 @@
 	font-family: 'Open Sans';
 	font-size: 14px;
 	-webkit-appearance: none;
+	-webkit-border-radius:0;
 }
 
 .gs-ftext:disabled {
@@ -73,49 +73,37 @@
 	width: 500px;
 }
 
-.gs-flabel .gs-prefix {
+.gs-flabel .gs-prefix-group {
 	display: table;
+	border-collapse: separate;
+	width: 100%;
 }
 
-.gs-flabel .gs-prefix .gs-ftext {
+.gs-flabel .gs-prefix-group .gs-ftext {
 	display: table-cell;
 }
 
-.gs-flabel .gs-prefix-text {
+.gs-flabel .gs-addon {
 	background: #EEE;
 	color: #888;
-	padding: 6px;
+	padding-left: 10px;
+	padding-right: 10px;
 	border: 1px solid #AAA;
-	border-radius: 5px;
 	display: table-cell;
 	vertical-align: middle;
 }
 
-.gs-flabel .gs-prefix-text.left {
+.gs-flabel .gs-addon.icon {
+	width: 15px;
+	text-align: center;
+}
+
+.gs-prefix-group > .gs-addon:first-child {
 	border-right: 0;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
 }
 
-.gs-flabel .gs-prefix-text.right {
+.gs-prefix-group > .gs-addon:last-child {
 	border-left: 0;
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-}
-
-.gs-flabel .gs-withpre.left {
-
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-}
-
-.gs-flabel .gs-withpre.right {
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-}
-
-.gs-flabel .gs-withpre.both {
-	border-radius: 0;
 }
 
 .gs-flabel.success {
@@ -151,7 +139,6 @@
 .gs-fselect {
 	background: #FFF url(../img/dropdownarrow.png) right 8px top 8px no-repeat;
 	border: 1px solid #AAA;
-	border-radius: 3px;
 	height: 36px;
 	width: 220px;
 	padding: 5px;
@@ -164,6 +151,7 @@
 	-o-appearance: none;
 	-moz-appearance: none;
 	-ms-appearance: none;
+	-webkit-border-radius:0;
 }
 
 select::-ms-expand {
@@ -256,7 +244,6 @@ select::-ms-expand {
 
 .gs-itemgroup {
 	border: 1px solid #CCC;
-	border-radius: 3px;
 	padding: 10px;
 	background: #EEE;
 	margin-top: 10px;
@@ -272,7 +259,6 @@ select::-ms-expand {
 .gs-textarea {
 	background: #FFF;
 	border: 1px solid #AAA;
-	border-radius: 3px;
 	padding: 10px;
 	min-height: 100px;
 	min-width: 400px;
@@ -280,6 +266,7 @@ select::-ms-expand {
 	font-family: 'Open Sans';
 	font-size: 14px;
 	-webkit-appearance: none;
+	-webkit-border-radius:0;
 }
 
 .gs-textarea.noresize {
