--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 html, body {
 	margin: 0;
@@ -53,6 +54,7 @@ html, body {
 	margin: auto;
 }
 
+/*
 #content #box form input[type="text"],
 #content #box form input[type="password"] {
 	width: 153px;
@@ -60,6 +62,15 @@ html, body {
 	font-size: 15px;
 	margin: none;
 	margin-top: 10px;
+}
+*/
+
+.gs-flabel {
+	margin-top: 10px;
+}
+
+.gs-flabel .gs-ftext {
+	width: 150px;
 }
 
 #content #box form input[type="submit"] {
