--- a/css/message.css
+++ b/css/message.css
@@ -3,6 +3,7 @@
 .gs-messagebox {
 	width: calc(100% - 60px);
 	margin: auto;
+	margin-left: 15px;
 	margin-top: 5px;
 	border-left: 5px #245471 solid;
 	border-radius: 3px;
@@ -10,6 +11,7 @@
 	background: #3C8DBC;
 	font-family: 'Open Sans';
 	color: #FFF;
+	display: inline-block;
 }
 
 .gs-messagebox.success {
@@ -50,26 +52,6 @@
 	-webkit-overflow-scrolling: touch;
 }
 
-.gs-modal-content2 {
-	z-index: 11;
-	background: #FFF;
-	display: none;
-	
-	font-family: 'Open Sans';
-	
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	margin: auto;
-	width: 600px;
-	
-	border-radius: 3px;
-	box-shadow: 0px 5px 15px 2px rgba(0,0,0,.3);
-	transition: .2s;
-}
-
 .gs-modal-content {
 	z-index: 11;
 	background: #FFF;
@@ -103,6 +85,14 @@
 .gs-modal-content.success {
 	background-color: #008D4C;
 	color: white;
+}
+
+.gs-modal-content.small {
+	width: 300px;
+}
+
+.gs-modal-content.large {
+	width: 900px;
 }
 
 .gs-modal-content.noclose .header .close {
