--- a/css/sidemenu.css
+++ b/css/sidemenu.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .gs-sidemenu {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	top: 60px;
 	height: calc(100% - 60px);
